<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
      <Button
        android:id="@+id/countycfg"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:text="@string/countycfg" />
      <Button
        android:id="@+id/admtorcfg"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_margin="40dip"
        android:text="@string/admtorcfg" />
      <Button
        android:id="@+id/stationcfg"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:text="@string/stationcfg" />

</LinearLayout>