<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnSerch"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dip"
        android:text="@string/btnserch" />

    <Button
        android:id="@+id/btnMoniter"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/btnmoniter" />

    <Button
        android:id="@+id/btnWarn"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"/>
    
    <Button
        android:id="@+id/btnConfig"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_margin="8dip"
        android:text="@string/btnconfig"/>

</LinearLayout>
